--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -50,12 +50,6 @@
 	</div>
 
 	<div class="col-md-6">
-		<div *ngIf="product.title" class="card" style="width: 20rem;">
-		  <img class="card-img-top" [src]="product.imageUrl" *ngIf="product.imageUrl">
-		  <div class="card-body">
-		    <h5 class="card-title">{{ product.title }}</h5>
-		    <p class="card-price">{{ product.price | currency:"CAD":true }}</p>
-		  </div>
-		</div>	
+		<product-card [product]="product" [show-actions]="false"></product-card>
 	</div>
 </div>
