--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,32 +1,16 @@
 <div *ngIf="product.title" class="card">
-  <img *ngIf="product.imageUrl" class="card-img-top" [src]="product.imageUrl" alt="{{product.title}}">
-  <div class="card-body">
-    <h5 class="card-title">{{ product.title }}</h5>
-    <p class="card-text">{{ product.price | currency:'CAD' }}</p>
-  </div>
-
-  <div *ngIf="showActions" class="card-footer">
-  	<button
-      *ngIf="getQuantity() === 0; else updateQuantity"
-			(click)="addToCart()"
-  		class="btn btn-secondary btn-block"
-  	>Add to cart</button>
-    <ng-template #updateQuantity>
-      <div class="row no-gutters">
-        <div class="col-2">
-          <button 
-            (click)="removeFromCart()"
-            class="btn btn-secondary btn-block">-</button>
-        </div>
-        <div class="col text-center">
-          {{ getQuantity() }} in cart
-        </div>
-        <div class="col-2">
-          <button 
+    <img *ngIf="product.imageUrl" src="{{ product.imageUrl }}" class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">{{ product.title }}</h5>
+        <p class="card-text">{{ product.price | currency:'USD' }}</p>
+    </div>
+    <div *ngIf="showActions && shoppingCart" class="card-footer">
+        <button
+            *ngIf="shoppingCart.getQuantity(product) === 0; else updateQuantity"
             (click)="addToCart()"
-            class="btn btn-secondary btn-block">+</button>
-        </div>
-      </div>
-    </ng-template>
-  </div>
+            class="btn btn-secondary btn-block">Add to Cart</button>
+        <ng-template #updateQuantity>
+            <product-quantity [product]="product" [shopping-cart]="shoppingCart"></product-quantity>
+        </ng-template>
+    </div>
 </div>
