--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -2,6 +2,10 @@
 <div class="row col-10" *ngIf="cart$ | async as cart">
 	<p>
 		You have {{ cart.totalItemsCount }} items in your shopping cart
+		<button 
+		*ngIf="cart.items.length" 
+		(click)="clearCart()"
+		class="btn btn-light btn-sm">Clear Shopping Cart</button>
 	</p>
 	<table class="table">
 		<thead>
@@ -35,8 +39,8 @@
 			</tr>
 		</tfoot>
 	</table>
-	<button 
-		*ngIf="cart.totalItemsCount != 0"
-		(click)="clearCart()"
-		class="btn btn-danger btn-sm">Clear Shopping Cart</button>
+	<a
+		*ngIf="cart.items.length"
+		routerLink="/check-out" 
+		class="btn btn-primary">Check Out</a>
 </div>
