touched the overall layout

--- a/src/app/shopping/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping/shopping-cart/shopping-cart.component.html
@@ -1,17 +1,20 @@
 <h1>Shopping Cart</h1>
 <div class="row col-10" *ngIf="cart$ | async as cart">
-	<p>
-		You have {{ cart.totalItemsCount }} items in your shopping cart
-		<button 
-		*ngIf="cart.items.length" 
-		(click)="clearCart()"
-		class="btn btn-light btn-sm">Clear Shopping Cart</button>
-	</p>
+	<div class="card-body">
+		<p>
+			You have {{ cart.totalItemsCount }} items in your shopping cart.
+			<button
+				*ngIf="cart.items.length"
+				(click)="clearCart()"
+				class="float-right btn btn-light btn-sm">
+				Clear Cart
+			</button>
+		</p>
+	</div>
 	<table class="table">
 		<thead>
 			<tr>
-				<th>
-					
+				<th>	
 				</th>
 				<th>Product</th>
 				<th class="text-center" style="width: 230px">Quantity</th>
