--- a/src/app/core/bs-navbar/bs-navbar.component.html
+++ b/src/app/core/bs-navbar/bs-navbar.component.html
@@ -1,54 +1,54 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-  <a class="navbar-brand" routerLink="/">Shop!</a>
-  <button 
-    class="navbar-toggler" 
-    type="button" 
-    data-toggle="collapse" 
-    data-target="#navbarsExampleDefault" 
-    aria-controls="navbarsExampleDefault" a
-    ria-expanded="false" a
-    ria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/shopping-cart">
-          Shopping Cart
-          <span class="badge badge-warning badge-pill" *ngIf="cart$ | async as cart">
-            {{ cart.totalItemsCount }}
-          </span>
-        </a>
-      </li>
-      <ng-template #anonymousUser>
+  <div class="container">
+    <a class="navbar-brand" routerLink="/">
+      <i class="fa fa-leaf" aria-hidden="true"></i>
+    </a>
+    <button 
+      class="navbar-toggler" 
+      type="button" 
+      data-toggle="collapse" 
+      data-target="#navbarsExampleDefault" 
+      aria-controls="navbarsExampleDefault" a
+      ria-expanded="false" a
+      ria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a
-            class="nav-link" 
-            routerLink="/login">Login</a>
+          <a class="nav-link" routerLink="/shopping-cart">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+            <span class="badge badge-warning badge-pill" *ngIf="cart$ | async as cart">
+              {{ cart.totalItemsCount }}
+            </span>
+          </a>
         </li>
-      </ng-template>
-      <li 
-        ngbDropdown 
-        *ngIf="appUser; else anonymousUser" 
-        class="nav-item dropdown">
-        <a 
-          ngbDropdownToggle 
-          class="nav-link dropdown-toggle" 
-          id="dropdown01" d
-          ata-toggle="dropdown" 
-          aria-haspopup="true" 
-          aria-expanded="false"
-        >{{ appUser.name }}</a>
-        <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-          <ng-container *ngIf='appUser.isAdmin'>
-            <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-            <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
-          </ng-container>
-          <a class="dropdown-item" (click)="logout()">Log Out</a>
-        </div>
-      </li>
-    </ul>
-  </div>
+      </ul>
+
+      <ul class="navbar-nav">
+        <li 
+          ngbDropdown 
+          *ngIf="appUser; else anonymousUser" 
+          class="nav-item dropdown">
+          <a 
+            ngbDropdownToggle 
+            class="nav-link dropdown-toggle" 
+            id="dropdown01" d
+            ata-toggle="dropdown" 
+            aria-haspopup="true" 
+            aria-expanded="false"
+          >{{ appUser.name }}</a>
+          <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
+            <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
+            <ng-container *ngIf='appUser.isAdmin'>
+              <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
+              <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+            </ng-container>
+            <a class="dropdown-item" (click)="logout()">Log Out</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div> 
 </nav>
