--- a/src/app/admin/components/admin-products/admin-products.component.html
+++ b/src/app/admin/components/admin-products/admin-products.component.html
@@ -8,51 +8,39 @@
 		type="text" class="form-control" placeholder="Search...">
 </p>
 
-<!-- <data-table 
-	[items]="items"
-	[itemCount]="itemCount"
-	(reload)="reloadItems($event)"
->
-	<data-table-column
-		[property]="'title'"
-		[header]="Title"
-		[sortable]="true"
-		[resizable]="true"
-	>	
-	<data-table-column
-		[property]="'price'"
-		[header]="Price"
-		[sortable]="true"
-		[resizable]="true"
-	>
-		<ng-template #dataTableCell let-item="product">
-			{{ product.price | currency:'CAD':true }}
-		</ng-template>
-	<data-table-column
-		[property]="'key'"
-	>
-		<ng-template #dataTableCell let-item="product">
-			<a [routerLink]="['/admin/products/', p.key]">Edit</a>
-		</ng-template>
-</data-table> -->
+<data-table
+    [items]="items"
+    [itemCount]="itemCount"
+    (reload)="reloadItems($event)">
 
-<table class="table">
-	<thead>
-		<tr>
-			<th>Title</th>
-			<th>Price</th>
-			<th></th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr *ngFor="let p of filteredProducts">
-			<td>{{p.title}}</td>
-			<td>{{p.price}}</td>
-			<td>
-				<a [routerLink]="['/admin/products/', p.key]">Edit</a>
-			</td>
-		</tr>
-	</tbody>
-</table>
+    <data-table-column
+        [property]="'title'"
+        [header]="'Title'"
+        [sortable]="true"
+        [resizable]="true"
+    >
+    </data-table-column>
+
+    <data-table-column
+        [property]="'price'"
+        [header]="'Price'"
+        [sortable]="true"
+        [resizable]="true"
+    >
+    <!-- 'item' references the current row in the data-table -->
+    <ng-template #dataTableCell let-item="item">
+        {{ item.price | currency:'CAD' }}
+    </ng-template>
+    </data-table-column>
+
+    <data-table-column
+        [property]="'key'"
+    >
+    <ng-template #dataTableCell let-item="item">
+            <a [routerLink]="['/admin/products/', item.key]">Edit</a>
+    </ng-template>
+    </data-table-column>
+
+</data-table>
 
 
