--- a/src/app/core/bs-navbar/bs-navbar.component.html
+++ b/src/app/core/bs-navbar/bs-navbar.component.html
@@ -27,6 +27,11 @@
       </ul>
 
       <ul class="navbar-nav">
+        <ng-template #anonymousUser>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login">Login</a>
+          </li>
+        </ng-template>
         <li 
           ngbDropdown 
           *ngIf="appUser; else anonymousUser" 
