--- a/src/app/core/bs-navbar/bs-navbar.component.html
+++ b/src/app/core/bs-navbar/bs-navbar.component.html
@@ -8,9 +8,9 @@
       type="button" 
       data-toggle="collapse" 
       data-target="#navbarsExampleDefault" 
-      aria-controls="navbarsExampleDefault" a
-      ria-expanded="false" a
-      ria-label="Toggle navigation">
+      aria-controls="navbarsExampleDefault"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
@@ -50,7 +50,7 @@
               <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
               <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
             </ng-container>
-            <a class="dropdown-item" (click)="logout()">Log Out</a>
+            <a class="dropdown-item" routerLink="/" (click)="logout()">Log Out</a>
           </div>
         </li>
       </ul>
